assert-struct/tests/snapshots/nested__deeply_nested_not_equal_pattern.snap
---
source: assert-struct/tests/nested.rs
expression: message
---
error: assert_struct! failed
  --> assert-struct/tests/nested_errors/deeply_nested_not_equal_pattern.rs:39:26
   |
39 |                 timeout: != 30,  // Line 38 - should report this line (will fail because it IS 30)
   |                          ^^^^^ got 30
